--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -22,20 +22,57 @@
         android:onClick="onSearchZip"
         android:text="Search"/>
 
-    <EditText
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/edtNeighborhood"/>
+        android:orientation="horizontal">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:text="Bairro"
+            android:padding="10dp"
+            android:textAppearance="@android:style/TextAppearance.Large"/>
+        <EditText
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/edtNeighborhood"
+            android:textAppearance="@android:style/TextAppearance.Large"/>
+    </LinearLayout>
 
-    <EditText
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/edtCity"/>
+        android:layout_height="wrap_content">
 
-    <EditText
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:text="Cidade"
+            android:padding="10dp"
+            android:textAppearance="@android:style/TextAppearance.Large"/>
+        <EditText
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/edtCity"
+            android:textAppearance="@android:style/TextAppearance.Large"/>
+
+    </LinearLayout>
+
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/edtStreet"/>
+        android:layout_height="wrap_content">
 
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:text="Logradouro"
+            android:padding="10dp"
+            android:textAppearance="@android:style/TextAppearance.Large"/>
 
+        <EditText
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/edtStreet"
+            android:textAppearance="@android:style/TextAppearance.Large"/>
+
+    </LinearLayout>
 </LinearLayout>
